<?xml version="1.0"?>
<package format="2">
    <name>hybrid_astar</name>
    <version>0.0.2</version>
    <description>The hybrid_astar package</description>
    <maintainer email="kurzer@kth.se">Karl Kurzer</maintainer>
    <license>BSD</license>
    <author email="kurzer@kth.se">Karl Kurzer</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>tf</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_eigen</depend>
    <depend>map_server</depend>

    <depend>grid_map_core</depend>
    <depend>grid_map_ros</depend>
    <depend>grid_map_cv</depend>
    <depend>grid_map_filters</depend>
    <depend>grid_map_loader</depend>
    <depend>grid_map_msgs</depend>
    <depend>grid_map_octomap</depend>
    <depend>grid_map_rviz_plugin</depend>
    <depend>grid_map_visualization</depend>

    <depend>cavc</depend>

</package>
